<resources>
    <string name="app_name">Fragmentos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtRePassword">Confirme contraseña</string>
    <string name="txtName">Nombre</string>
    <string name="txtLastName">Apellido</string>
    <string name="rbMacho">Masculino</string>
    <string name="rbHembra">Femenino</string>
    <string name="btnAddNewUser">Registrar</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnRegister">Registrar</string>
    <string name="txtRut">Rut</string>
    <string name="txtUser">Email</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="nav_products">Productos</string>
    <string name="helloProducts">Productos</string>
    <string name="btnAddProduct">Agregar producto</string>
    <string name="nav_add_products">Crear productos</string>
    <string name="txProductName">Nombre del producto</string>
    <string name="txProductStock">Stock product</string>
    <string name="btnUpdateProduct">Actualizar producto</string>
    <string name="txUpdateProductName">Nuevo nombre</string>
    <string name="txUpdateProductStock">Editar stock</string>
    <string name="btnDeleteProduct">Eliminar producto</string>
    <string name="nav_edit_person">Editar Perfil</string>
    <string name="nav_maps">El mapa</string>
    <string name="nav_order_fragment">Ordenes</string>
    <string name="btnEditarPerson">Editar Perfil</string>
    <string name="title_activity_splash">Ordenes</string>
    <string name="btnAddOrder">Agregar orden</string>
    <string name="btnOpenAddNewOrder">Crear nueva orden</string>
    <string name="spProducts">Producto</string>
    <string name="isStatusActive">Activo</string>
    <string name="isStatusInactive">Pendite</string>
    <string name="btnSubmitNewOrder">Agregar orden</string>
    <string name="txTotalNewOrder">Total</string>
    <string name="facebook_app_id">1951849398185117</string>
    <string name="not_firebase_auth">No fue posible logear con firebase</string>
    <string name="title_activity_maps">Map</string>
    <string name="bad_credentials">Credenciales  errones</string>

</resources>
