<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddProductFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/txProductName"
        android:hint="@string/txProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        />

    <EditText
        android:id="@+id/txProductStock"
        android:hint="@string/txProductStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubmitNewProduct"
        android:text="@string/btnAddProduct"
        />
</LinearLayout>