<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_product_black_24dp"
            android:title="@string/nav_products" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_airport_shuttle_black_24dp"
            android:title="@string/nav_order_fragment">
        </item>
        <item
            android:id="@+id/nav_edit_person"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/nav_edit_person">
        </item>

        <item
            android:id="@+id/maps"
            android:icon="@mipmap/ic_launcher_round"
            android:title="Mapa">
        </item>
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/com_facebook_close"
            android:title="Cerrar Sesion">
        </item>

    </group>


</menu>
